--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,24 @@
-.test_span {
-    font-style: italic;
-    font-size: 16px;
+/* * {
+    border: solid 1px red;
+} */
+
+.wrapper {
+    max-width: 80%;
+}
+
+.nav-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.general {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.photo {
+    display: block;
+    margin: 0 auto;
 }
