--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,8 @@
-/* * {
-    border: solid 1px red;
-} */
-
 .wrapper {
     max-width: 80%;
 }
 
-.nav-menu {
+.nav-menu, .footer-cv {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -18,7 +14,15 @@
     margin: 0 auto;
 }
 
+.contact-change {
+    font-size: 16px;
+}
+
 .photo {
     display: block;
     margin: 0 auto;
+}
+
+.logo {
+    max-width: 10%;
 }
